Finished the Remove method to my custom list class. Added unit tests for the remove method.

--- a/UnitTestJuan/UnitTestJuan.csproj
+++ b/UnitTestJuan/UnitTestJuan.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="UnitTestJuan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestRamirez.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
